--- a/index.html
+++ b/index.html
@@ -18,8 +18,15 @@
   <section id="banner">
     <div class="container">
       <div class="min-container">
-        MyCodePy
-        <i class='bx bx-code-alt'></i>
+        <div class="min-header">
+          <h4>
+            Made by a student at the Federal Institute of Piauí, Brazil. Studying Systems Analysis and Development.
+          </h4>
+        </div>
+        <span> MyCodePy </span>
+        <a href="https://www.wikiwand.com/pt/Python" target="_blank">
+          <img src="./images/python_logo.png" alt="Python logo not found">
+        </a>
       </div>
     </div>
   </section>
@@ -44,7 +51,7 @@
           <code id="popup-code" class="language-python"></code>
         </pre>
         <div class="explanation-code">
-          <h2>Code Explanation</h2>
+          <h2>Purpose of the code</h2>
           <p id="explanation">
             <!--Explicação gerada com JavaScript-->
           </p>
